--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="show_styled">Show styled dialog</string>
     <string name="show_message">Show custom message dialog</string>
     <string name="show_message_style">Show custom message AND style dialog</string>
+    <string name="notes"><u>NOTES</u>: </string>
 </resources>
